--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -15,3 +15,13 @@
     }
   }
   
+  .noiseCanvas {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    z-index: 1000;
+    opacity: 0.06;
+  }
