--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -17,3 +17,50 @@
     color: black;
     transition: all 0.3s ease;
   }
+
+.tooltipButton {
+  position: relative;
+}
+
+.tooltipButton[title]:hover::before,
+.tooltipButton[title]:hover::after {
+  opacity: 0;
+  animation: fadeIn 0.3s ease forwards;
+}
+
+.tooltipButton[title]:hover::before {
+  content: "";
+  position: absolute;
+  bottom: 120%;
+  left: 10px;
+  border: 6px solid transparent;
+  border-top-color: #000;
+  transform: translateY(6px);
+}
+
+.tooltipButton[title]:hover::after {
+  content: attr(title);
+  position: absolute;
+  bottom: 140%;
+  left: 0;
+  background: #000;
+  color: #fff;
+  padding: 8px 12px;
+  border-radius: 6px;
+  font-size: 11px;
+  white-space: nowrap;
+  box-shadow: 0 4px 14px rgba(0, 0, 0, 0.15);
+  backdrop-filter: blur(5px);
+  z-index: 10;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
