--- a/src/styles/Projects.module.css
+++ b/src/styles/Projects.module.css
@@ -1,26 +1,25 @@
 .container-row-project {
     display: grid;
-    grid-template-columns: 1fr 1.5fr;
-    gap: 4rem;
-    margin-bottom: 5em;
-    justify-items: center;
-    justify-content: center;
-    align-items: start;
+    grid-template-columns: 1.5fr 1fr;
+    gap: 30px;
+    width: 100%;
+    max-width: 100%;
+    margin: 0 auto;
 }
 .container-secondary-row-project {
     display: grid;
-    grid-template-columns: 1.5fr 1fr;
-    gap: 4rem;
-    justify-items: center;
-    justify-content: center;
-    align-items: start;
+    grid-template-columns: 1fr 1.5fr;
+    gap: 30px;
+    width: 100%;
+    max-width: 100%;
+    margin: 20px auto 0;
 }
 .colorop {
     background: rgb(62, 62, 219);
 }
 .full {
     width: 100%;
-    min-width: 420px;
+    min-width: 0;
 }
 .view {
     font-family: "Abril Fatface", serif;
@@ -67,6 +66,11 @@
     .small {
         width: auto;
         min-width: auto;
+    }
+}
+@media (max-width: 1138px) {
+    .full, .small {
+        width: 100%;
     }
 }
 .shadow-video {
@@ -143,30 +147,9 @@
     );
 }
 .rainbow {
-    background-image: linear-gradient(
-        180deg,
-        hsl(278deg 88% 27%) 7%,
-        hsl(290deg 68% 29%) 19%,
-        hsl(304deg 59% 31%) 26%,
-        hsl(316deg 57% 35%) 31%,
-        hsl(325deg 56% 39%) 36%,
-        hsl(333deg 55% 43%) 40%,
-        hsl(340deg 54% 46%) 44%,
-        hsl(345deg 54% 49%) 48%,
-        hsl(350deg 58% 52%) 51%,
-        hsl(355deg 65% 55%) 54%,
-        hsl(360deg 72% 58%) 57%,
-        hsl(4deg 80% 58%) 61%,
-        hsl(6deg 82% 58%) 64%,
-        hsl(8deg 84% 58%) 67%,
-        hsl(9deg 86% 57%) 70%,
-        hsl(11deg 88% 57%) 73%,
-        hsl(12deg 90% 57%) 76%,
-        hsl(14deg 92% 56%) 79%,
-        hsl(16deg 93% 56%) 83%,
-        hsl(17deg 95% 55%) 86%,
-        hsl(19deg 97% 54%) 90%,
-        hsl(20deg 98% 53%) 95%,
-        hsl(24deg 100% 50%) 100%
-    );
+    background: rgb(237,47,55);
+    background: -moz-linear-gradient(173deg, rgba(237,47,55,1) 27%, rgba(51,53,58,1) 100%);
+    background: -webkit-linear-gradient(173deg, rgba(237,47,55,1) 27%, rgba(51,53,58,1) 100%);
+    background: linear-gradient(173deg, rgba(237,47,55,1) 27%, rgba(51,53,58,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ed2f37",endColorstr="#33353a",GradientType=1);
 }
